@@ -2009,7 +2009,7 @@ function RefreshHardwareTable()
 			{
 				SerialName="I2C";
 			}
-			else if ((item.Type == 14)||(item.Type == 25)||(item.Type == 28)||(item.Type == 30))
+			else if ((item.Type == 14)||(item.Type == 25)||(item.Type == 28)||(item.Type == 30)||(item.Type == 34))
 			{
 				SerialName="WWW";
 			}
